app/assets/stylesheets/application.css.scss
/* ... */
#layout-footer {
  background-color: $green;
  color: $white;
  padding-top: $line-height-computed;

  dl {
    vertical-align: top;

    dt {
      font-family: $font-family-bold;
    }

    a {
      color: $white;
      &:hover {
        color: $black;
      }
    }
  }
}

#layout-acknowledgements {
  background-color: $white;
  color: $dark-grey;

  min-height: 64px;
  line-height: 64px;

  .copyright {
    display: inline-block;
    float: left;
  }

  .designed_by {
    display: inline-block;
    float: right;
  }
}

#layout-heading {
  height: 88px;
  background-color: $lighter-grey;

  @media (max-width: $screen-xs-max) {
    height: auto;
  }

  .page-header {
    font-family: $font-family-extra-bold;
    font-size: 30px;
    text-transform: uppercase;
    display: inline-block;
    padding-bottom: 0;
    margin: 0;
    line-height: 88px;
    border: none;
    color: $green;
    @media (max-width: $screen-xs-max) {
      line-height: normal;
    }
  }

  .icons {
    float: right;
    margin-top: 27px;
    display: inline-block;
    list-style-type: none;
    padding: 0;
  }
}

#layout-breadcrumbs {
  .breadcrumb {
    padding-left: 0;
    background-color: $white;
    font-size: 70%;
    color: $medium-grey;

    &> li + li:before {
      /*content: "/\00a0";*/
      /*padding: 0 5px;*/
      content: "\2192";
      color: $medium-grey;
    }

    a {
      color: $medium-grey;
    }
  }
}

#layout-main {
  @media (min-width: $screen-sm-min) {
    min-height: 250px;
  }
}

#layout-homepage-categories {
  background-color: $lightest-grey;
  margin-bottom: $line-height-computed;

  @media (max-width: $screen-xs-max) {
    display: none;
  }

  .container {
    padding-top: 15px;
    padding-bottom: 15px;
  }

  .category {
    overflow: hidden;

    &:first-child {
      padding-left: 0;
    }

    .photo {
      background-color: $white;
      background-position: 50% 0;
      background-repeat: no-repeat;
      background-size: cover;
      width: 100%;
      height: 120px;
      position: relative;

      &.contain {
        background-size: contain;
        background-position: center;
      }

      .name {
        position: absolute;
        bottom: 0;
        left: 0;
        background: rgba($dark-grey, 0.7);
        width: 100%;
        font-family: $font-family-bold;
        text-transform: uppercase;
        text-align: center;
        color: white;
        line-height: 25px;
      }
    }
  }
}

#home {
  .first-row {
    margin-bottom: $line-height-computed;
  }

  .content {
    padding-left: 0;

    .container {
      width: auto;
      padding: 0;

      p {
        font-size: 17px;
      }
    }
  }

  .find-local-stockist {
    padding-right: 0;

    @media (max-width: $screen-xs-max) {
      padding-left: 0;
    }

    h3 {
      text-transform: uppercase;
    }

    .map {
      background-position: 50% 0;
      background-repeat: no-repeat;
      background-size: cover;
      width: 100%;
      height: 193px;
    }

    .stockists-search {
      width: 100%;
      margin: 0;
      padding: 0;

      .flexbox & {
        display: -webkit-box;
        display: -webkit-flex;
        display: -moz-box;
        display: -ms-flexbox;
        display: flex;
        .form-group {
          &, input {
            -webkit-box-flex: 1;
            -webkit-flex: 1;
            -moz-box-flex: 1;
            -ms-flex: 1;
            flex: 1;
            width: 100%;
          }
        }
      }
    }
  }

  .products {
    margin-bottom: $line-height-computed;

    .product {
      &:first-child {
        padding-left: 0;
      }
      padding-left: $grid-gutter-width/2;
      padding-right: $grid-gutter-width/2;

      @media (max-width: $screen-xs-max) {
        padding-left: 0;
        padding-right: 0;
        margin-bottom: $grid-gutter-width;
      }
    }

    .post {
      padding-left: $grid-gutter-width/2;
      padding-right: 0;

      @media (max-width: $screen-xs-max) {
        padding-left: 0;
        padding-right: 0;
        margin-bottom: $grid-gutter-width;
      }
    }

    .product, .post {
      overflow: hidden;

      a, a:hover {
        color: $dark-grey;
      }

      h3 {
        font-family: $font-family-extra-bold;
        color: $green;
        text-transform: uppercase;
      }

      .photo {
        background-position: 50% 0;
        background-repeat: no-repeat;
        background-size: cover;
        width: 100%;
        height: 193px;

        &.contain {
          background-size: contain;
          background-position: center;
        }
      }
    }
  }
}

#map {
  margin-top: $grid-gutter-width/2;
  height: 334px;

  /* make a bit taller for non-mobile */
  @media (min-width: $screen-sm-min) {
    height: 534px;
  }
}

.event {
  #map {
    margin-top: 0;
  }
}

#search-results-page {
  .search-filters {
    margin-bottom: $grid-gutter-width;
    text-align: center;
    label {
      font-family: $font-family-base;
    }

    .filter-results {
      margin-right: 20px;
    }
  }

  #search_results {
    max-width: $screen-sm-max;

    li {
      margin-bottom: $grid-gutter-width/4;

      .result_type {
        @media (min-width: $screen-sm-min) {
          display: inline-block;
          width: 80px;
        }
      }

      &.product {
        &:hover {
          background-color: $table-bg-hover;
        }
      }
    }
  }
}

